@@ -9,6 +9,7 @@ NOT RELEASED
 - fixed unsigned short problem with map (and other serialization chunks requiring a ushort)
 - interface (non prepared query with params) is ready for binary protocol v2 (but no implementation)
 - fixed asynchronous worker shutdown in connection
+- default consistency level (see TransportConfig.DefaultConsistencyLevel)
 
 version 3.2.1
 NOT RELEASED
